@@ -1,5 +1,11 @@
 2009-09-25  Felix Wolfsteller <felix.wolfsteller@intevation.de>
 
+	* openvassd/ntp_11.c (files_add_translation): Reformatted.
+
+	* openvassd/attack.c: Minor cosmetics.
+
+2009-09-25  Felix Wolfsteller <felix.wolfsteller@intevation.de>
+
 	* openvassd/ntp_11.c: Cosmetics, replaced K&R function decls.
 
 2009-09-25  Felix Wolfsteller <felix.wolfsteller@intevation.de>
